Fixes to dialog z-index and sizing

--- a/src/components/dialog/style.scss
+++ b/src/components/dialog/style.scss
@@ -12,7 +12,7 @@
 }
 
 .active {
-    z-index: 1;
+    z-index: 2;
     display: block;
 }
 
@@ -31,6 +31,7 @@
 .content {
     color: #fff;
     text-align: center;
+    max-width: 20em;
 }
 
 .buttons {
